project-team: Added app-message component to show error/success message

--- a/src/app/components/project/project-team/project-team.component.html
+++ b/src/app/components/project/project-team/project-team.component.html
@@ -16,6 +16,7 @@
 
         <div class="dashboard-content">
         	<app-users-index [userList]="users"></app-users-index>
+          <app-message></app-message>
         </div>
       </div>
 
