--- a/src/app/components/payment/payment-list/payment-list.component.html
+++ b/src/app/components/payment/payment-list/payment-list.component.html
@@ -14,7 +14,7 @@
 
             <div class="dashboard-content">
 
-                <app-payment-index *ngIf="payments.length; else elseBlock" [paymentList]="payments"></app-payment-index>
+                <app-payment-index *ngIf="payments.length; else elseBlock" [paymentList]="payments" (paginate)="paginatePayment($event)"></app-payment-index>
                 <ng-template #elseBlock>No payment made yet</ng-template>
             
             </div>
