--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="dashboard-content">
-              <app-users-index [userList]="users"></app-users-index>
+              <app-users-index [userList]="users" (paginate)="userPaginate($event)"></app-users-index>
             
             </div>
         </div>
