Integrated project team member movement
Now moving a member from one project to another/same is supported

--- a/src/app/components/project/project-team-build/project-team-build.component.html
+++ b/src/app/components/project/project-team-build/project-team-build.component.html
@@ -7,6 +7,7 @@
           <div class="dashboard-body-title">
             <h1>Team Builder</h1>
             <div>
+              <a routerLink="/project/team/move" class="button" [queryParams]="{project_id: teamBuilder.project_id}">Move member</a>
             </div>
           </div>
         </div>
