team-move: project: component: Added app-message component

--- a/src/app/components/project/project-team-move/project-team-move.component.html
+++ b/src/app/components/project/project-team-move/project-team-move.component.html
@@ -96,6 +96,7 @@
 	            </p>
                 <ng-template #elseBlock></ng-template>
 	          </div>
+	          <app-message></app-message>
 	          <div>
 	            <button (click)="create()" class="button is-fullwidth">Save</button>
 	          </div>
