--- a/src/app/components/project/project-single/project-single.component.html
+++ b/src/app/components/project/project-single/project-single.component.html
@@ -30,7 +30,7 @@
 	  </tr>
 	  <tr>
 	    <th>Client</th>
-	    <td>{{ project.client_id }}</td>
+	    <td>{{ project.client.full_name }}</td>
 	  </tr>
 	  <tr>
 	    <th>Comm. Paid</th>
